--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>你能帮帮我吗？</title>
+    <title>帮帮我</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">你能帮帮我吗？</a>
+          <a class="navbar-brand" href="#">帮帮我</a>
         </div>
         
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -109,7 +109,7 @@
       <div class=starter-template>
         <h1><center>正在施工中。。。</center></h1>
           <p id=imgp>
-            <img src="indexWring.jpg" height="280" width="280">
+            <img src="img/indexWring.jpg" height="280" width="280">
           </p>
       </div>
     </div>    
